further exploration of React.js

--- a/first_app/src/components/myStyles.css
+++ b/first_app/src/components/myStyles.css
@@ -52,3 +52,16 @@
 .footer h3 {
     text-align: center;
 }
+
+ /* for StylingCSS.js */
+.primary {
+    color: orange;
+}
+
+.font-xl {
+    font-size: 72px;
+}
+
+.error {
+    color: red;
+}
